misc fixes (accessibility, analytics, note overlap, etc)
Fixes include:
- Adding google analytics
- Making notes into "button" elements for improved accesibility
- Fixing an issue where multiple notes could be place in the same spot
- Fixing an issue where placing a note by clicking the noteLine would
  make the shadow note remain hidden until the cursor left and
  re-entered the note line.
- Fixing an issue where clicking the noteLine repeated times to add
  notes without moving the cursor resulted in the shadow note position
  being undefined and throwing errors in the console.

--- a/css/styles.css
+++ b/css/styles.css
@@ -220,11 +220,13 @@ a {
 }
 
 .hole {
+  display: block;
   position: absolute;
   top: 0;
   width: var(--hole-width);
   height: var(--hole-width);
   border-radius: 50%;
+  border: none;
   background-color: var(--hole-color);
   cursor: pointer;
 }
